fix: dark mode - header radius

--- a/website/web/css/theme-neon.css
+++ b/website/web/css/theme-neon.css
@@ -18,3 +18,7 @@
 body {
     background: radial-gradient(circle at top, #1b1f3b 0, #050716 55%);
 }
+
+header {
+    border-radius: 999px;
+}
